[package]
name = "pingtool"
version = "0.1.0"
edition = "2021"
authors = ["PingTool"]
description = "Cross-platform multi-target concurrent Ping tool"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
calamine = "0.26"
xlsx_writer = "0.1"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
anyhow = "1.0"
once_cell = "1.19"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
